--- a/style.css
+++ b/style.css
@@ -11,4 +11,10 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
-  }
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
