--- a/style.css
+++ b/style.css
@@ -20,3 +20,9 @@ body {
     flex-wrap: wrap;
     max-width: 400px;
 }
+
+.square {
+  background-color: #1d1d1d;
+  box-shadow: 0 0 2px #000;
+  height: 16px;
+}
