--- a/style.css
+++ b/style.css
@@ -25,4 +25,7 @@ body {
   background-color: #1d1d1d;
   box-shadow: 0 0 2px #000;
   height: 16px;
+  width: 16px;
+  margin: 2px;
+  transition: 2s ease;
 }
